[project]
name = "musiclib"
version = "1.14.1"
authors = [
    {name = "Alexander Rodionov", email = "tandav@tandav.me"},
]
description = "set of tools to work with scales, modes, modulations, chord progressions, voice leading, rhythm and more"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "colortool>=0.4.4",
    "mido>=1.3.0",
    "pipe21>=1.0.9",
    "svg.py",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "bumpver",
    "hypothesis",
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]

[project.urls]
source = "https://github.com/tandav/musiclib"
# docs = "https://tandav.github.io/musiclib"
issues = "https://tandav.github.io/musiclib/issues"
"release notes" = "https://tandav.github.io/musiclib/releases"

# ==============================================================================

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# [tool.setuptools]
# packages = ["pitch_detectors"]
# package-dir = {"" = "src"}

# [tool.setuptools.packages.find]
# exclude = ["data*"]

# ==============================================================================

[tool.bumpver]
current_version = "v1.14.1"
version_pattern = "vMAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    '^version = "{pep440_version}"',
    '^current_version = "{version}"',
]
"src/musiclib/__init__.py" = [
    "^__version__ = '{pep440_version}'",
]

# ==============================================================================

[tool.mypy]
# todo: review this
pretty = true
show_traceback = true
color_output = true
allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
implicit_reexport = true
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true


[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

# ==============================================================================

[tool.ruff]
select = ["ALL"]
ignore = [
    "E501",  # line too long
    "PLR0913", # too-many-arguments
    "Q", # quotes
    "D", # docstrings
    "ERA001",
    "N802",
    "ANN101",
    "ANN102",
    "ANN401",
    "EM101",
    "EM102",
    "TRY003",
    "SLF001",
    "S301",
    "S311",
    "S314",
    "TD002",
    "TD003",
    "TD004",
    "FIX002",
    "FIX004",
]

[tool.ruff.per-file-ignores]
"tests/*" = [
    "S101",
    "PLR2004",
    "ANN",
    "PT001",
    "PT011",
    "PT023",
    "N806",
]

[tool.ruff.isort]
force-single-line = true

# ==============================================================================

[tool.pylint.MASTER]
load-plugins=[
    "pylint_per_file_ignores",
]

[tool.pylint.messages-control]
disable = [
    "missing-function-docstring",
    "missing-class-docstring",
    "missing-module-docstring",
    "line-too-long",
    "import-outside-toplevel",
    "unused-variable",
    "too-many-arguments",
    "too-many-instance-attributes",
    "too-many-locals",
    "too-few-public-methods",
    "import-error",
    "unspecified-encoding",
    "redefined-outer-name",
    "invalid-name",
    "protected-access",
    "fixme",
    "duplicate-code",
    "cyclic-import",
]

[tool.pylint-per-file-ignores]
"/tests/" = "redefined-outer-name,pointless-statement"

# ==============================================================================

[tool.autopep8]
ignore="E501,E701"
recursive = true
aggressive = 3

# ==============================================================================

[tool.pyright]
venvPath = "/Users/tandav/.cache/.virtualenvs"
venv = "musiclib"
exclude = [
    "src/musiclib/util/sequence_builder.py",
]

# ==============================================================================

[tool.flake8]
ignore = ['E501', 'W503', 'W504', 'FNE008']
