[metadata]
name = musictool
version = 1.3.4
description = set of tools to help learning scales, modes, modulations, chord progressions, voice leading, rhythm
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tandav/musictool
author = Alexander Rodionov
author_email = tandav@tandav.me

[options]
packages = find:
install_requires =
    colortool>=0.0.2
    mido>=1.2.10
    pipe21>=1.0.9
    tqdm>=4.63.0
python_requires = >=3.10


[options.packages.find]
exclude =
    tests*
