[metadata]
name = musictool
version = 1.3.12
description = set of tools to help learning scales, modes, modulations, chord progressions, voice leading, rhythm
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tandav/musictool
author = Alexander Rodionov
author_email = tandav@tandav.me

[options]
packages = find:
python_requires = >=3.10
install_requires =
    colortool>=0.0.2
    mido>=1.2.10
    pipe21>=1.0.9
    tqdm>=4.63.0
[options.extras_require]
dev =
    autoflake==1.4
    autopep8==1.6.0
    bumpver==2022.1118
    flake8==4.0.1
    force-absolute-imports==0.9
    hypothesis==6.39.0
    ipykernel==6.16.0
    isort==5.10.1
    mypy==0.960
    no-init==0.1.3
    pre-commit==2.19.0
    pytest==7.0.1
    pytest-asyncio==0.18.1
    pytest-cov==3.0.0
    unify==0.5

[options.packages.find]
exclude =
    tests*

# ==============================================================================

[tool:pytest]
asyncio_mode = strict

# ==============================================================================

[mypy]
python_version = 3.10
pretty = true
show_traceback = true
color_output = true
allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
# disallow_untyped_defs = true TODO: enable
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

# ==============================================================================

[isort]
line_length = 120
include_trailing_comma = true
force_single_line = true
indent = 4

# ==============================================================================

[flake8]
max-line-length = 200
max-complexity = 10
ignore =
    E701,E704,E741,E721,
    W503,W504,
    C901,

# autopep8 config (uses same [flake8] section)
recursive = true
aggressive = 3
jobs = 8

# ==============================================================================

[bumpver]
current_version = "v1.3.12"
version_pattern = "vMAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = True
tag = True

[bumpver:file_patterns]
setup.cfg =
    version = {pep440_version}
    current_version = "{version}"
musictool/__init__.py =
    __version__ = '{pep440_version}'
