[metadata]
name = musictool
version = 1.5.1
description = set of tools to work with scales, modes, modulations, chord progressions, voice leading, rhythm and more
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tandav/musictool
author = Alexander Rodionov
author_email = tandav@tandav.me
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    colortool>=0.0.2
    mido>=1.2.10
    pipe21>=1.0.9
    tqdm>=4.63.0
python_requires = >=3.10
package_dir =
    =src

[options.packages.find]
where = src

[options.extras_require]
dev =
    autoflake
    autopep8
    bumpver
    flake8
    force-absolute-imports==0.11.0
    hypothesis
    ipykernel
    isort
    mypy
    no-init==0.2.0
    pre-commit
    pytest
    pytest-asyncio
    pytest-cov

[tool:pytest]
asyncio_mode = strict

[mypy]
python_version = 3.10
pretty = true
show_traceback = true
color_output = true
allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[mypy-tests.*]
disallow_untyped_defs = false

[isort]
line_length = 120
include_trailing_comma = true
force_single_line = true
indent = 4

[flake8]
max-line-length = 200
max-complexity = 10
recursive = true
aggressive = 3
jobs = 8

[bumpver]
current_version = "v1.5.1"
version_pattern = "vMAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = True
tag = True

[bumpver:file_patterns]
setup.cfg =
    version = {pep440_version}
    current_version = "{version}"
src/musictool/__init__.py =
    __version__ = '{pep440_version}'
